--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,16 @@
 
 .continer{
     width: 1200px;
-    border: 1px solid; 
     margin: 0 auto;
     height: 1100px;
 }
 
 .nav{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    background-color: rgb(15, 175, 249);
     width: 100%;
     height: 10%;
-    border: 1px solid;
 }
 
 .img1{
@@ -22,7 +23,6 @@
 .shop{
     width: 100%;
     height: 90%;
-    border: 1px solid red;
 }
 
 .korzinka{
@@ -41,7 +41,7 @@
 .inc{
     border-radius: 20%;
     color: white;
-    background-color: blue;
+    background-color: rgb(36, 36, 106);
     margin-left: 57.8%;
     margin-top: -30px;
     position: absolute;
@@ -144,6 +144,19 @@
     width: 10%;
 }
 
+.removebtn{
+    width: 80px;
+    height: 20px;
+    background-color: transparent;
+    border: none;
+    color: rgb(22, 198, 198);
+    font-size: 20px;
+}
+
+.removebtn:hover{
+    color: rgb(39, 151, 151);
+}
+
 .decbtn{
     background-color: transparent;
     border: none;
@@ -152,4 +165,18 @@
 .incbtn{
     background-color: transparent;
     border: none;
+}
+
+.clearbtn{
+    background-color: rgb(22, 191, 229);
+    border: none;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.clearbtn:hover{
+    background-color: aqua;
 }
