--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@
     width: 10%;
 }
 
-.shop{
+/* .shop{
     width: 100%;
     height: 90%;
-}
+} */
 
 .korzinka{
     display: flex;
@@ -39,12 +39,12 @@
 }
 
 .inc{
+    position: absolute;
     border-radius: 20%;
     color: white;
     background-color: rgb(36, 36, 106);
     margin-left: 57.8%;
     margin-top: -30px;
-    position: absolute;
 }
 .prod-item{
     display: flex;
@@ -91,7 +91,8 @@
 }
 
 
-.card{
+
+.cardtop{
     display: flex;
     width: 100%;
     height: 200px;
@@ -125,6 +126,7 @@
     padding-left: 50px;
     width: 100%;
     height: 100%;
+    border: 1px solid;
 }
 
 .incDec{
@@ -179,4 +181,31 @@
 
 .clearbtn:hover{
     background-color: aqua;
+}
+
+.total{
+    color: black;
+    display: flex;
+    width: 100%;
+    height: 100px;
+}
+
+.tleft{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+.trigth{
+    padding-right: 110px;
+    justify-content: end;
+    align-items: center;
+    display: flex;
+    width: 50%;
+    height: 100%;
+}
+
+hr{
+    margin-right: 40px;
 }
