--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 }
 
 .nav{
+    display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     background-color: rgb(15, 175, 249);
@@ -26,6 +27,8 @@
 } */
 
 .korzinka{
+    width: 50%;
+    height: 100%;
     display: flex;
     padding-left: 30px;
     font-size: 25px;
@@ -33,6 +36,24 @@
     justify-content: space-between;
 }
 
+
+.loginBtn{
+    padding-right: 50px;
+    justify-content: end;
+    align-items: center;
+    display: flex;
+    width: 50%;
+    height: 100%;
+}
+
+
+.lBtn{
+    width: 70px;
+    height: 40px;
+    border-radius: 15px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .korzinkaimg{
     margin-right: 60px;
     width: 30px;
@@ -122,10 +143,14 @@
 
 
 .pIteam{
-    padding-left: 50px;
-    width: 100%;
-    height: 100%;
+    width: 110%;
+    height: 110%;
     border: 1px solid;
+}
+
+
+.proditem{
+    padding-left: 50px;
 }
 
 .incDec{
@@ -169,6 +194,7 @@
 }
 
 .clearbtn{
+    margin-left: 70px;
     background-color: rgb(22, 191, 229);
     border: none;
     color: white;
@@ -187,6 +213,7 @@
     display: flex;
     width: 100%;
     height: 100px;
+    padding-left: 80px;
 }
 
 .tleft{
@@ -208,3 +235,69 @@
 hr{
     margin-right: 40px;
 }
+
+*{
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+.section{
+    background-color: rgb(0, 255, 255);
+    margin-left: 280px;
+    border-radius: 15px;
+    font-size: 25px;
+    margin-top: 200px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 600px;
+    height: 400px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.boxinput{
+    row-gap: 30px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.h5{
+    font-size: 35px;
+    text-align: center;
+}
+
+.errorh1{
+    margin-top: 300px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 200px;
+    color: red;
+}
+
+.form-input{
+    border: none;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-top: 20px;
+    width: 300px;
+    height: 50px;
+
+}
+
+.loginbtn{
+    margin-top: 10px;
+    margin-left: 150px;
+    width: 100px;
+    height: 40px;
+    border-radius: 15px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
